Fixed height 100vh on mobile devices

--- a/src/components/Word/Definition/Definition.module.css
+++ b/src/components/Word/Definition/Definition.module.css
@@ -66,6 +66,6 @@
     font-size: 14px;
   }
   .example {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
